kubernetes/infrastructure/network/envoy-gateway/app/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-internal
    namespace: network
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-external
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-external
    namespace: network
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: internal
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: internal-denniseffing-de-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    gatus.home-operations.com/endpoint: |-
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: external
spec:
  gatewayClassName: envoy-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: denniseffing-de-tls
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  compression:
    - type: Zstd
    - type: Brotli
    - type: Gzip
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: { }
  timeout:
    http:
      requestTimeout: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: http
    - name: envoy-internal
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: envoy-internal-auth
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - Cookie
      - X-Auth-Request-Redirect
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: network
          port: 80
      headersToBackend:
        - X-Auth-Request-Email
        - X-Auth-Request-Groups
        - X-Auth-Request-Preferred-Username
        - X-Auth-Request-User
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
